# CXX-Cross-Compile-Examples

./: .gitignore  REAMDE.md
.devcontainer/: Dokerfile
dep1/: CMakeLists.txt
dep1/src/: hello.cpp
hello_world/: CMakeLists.txt
hello_world/src/: main.cpp
